--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -12,11 +12,13 @@
             <header><div><span>Techium</span><nav></nav></div></header>
             <main>
                 <h1>Homepage</h1>
+                <!--Hero section-->
                 <section>
                     <div>
                         <h2>We help you build your brand!</h2>
                     </div>
                 </section>
+                <!--Services section-->
                 <section>
                     <div>
                         <header>
@@ -33,6 +35,7 @@
                         </div>
                     </div>
                 </section>
+                <!--Works-->
                 <section>
                     <div>
                         <header>
@@ -46,6 +49,7 @@
                         </div>
                     </div>
                 </section>
+                <!--About Us section-->
                 <section>
                     <div>
                         <header>
@@ -62,6 +66,7 @@
                         </div>
                     </div>
                 </section>
+                <!--Latest news section-->
                 <section>
                     <div>
                         <header><h2>Latest news</h2></header>
@@ -84,6 +89,7 @@
                         </div>
                     </div>
                 </section>
+                <!--Testimonials section-->
                 <section>
                     <div>
                         <header>
@@ -97,6 +103,7 @@
                         </div>
                     </div>
                 </section>
+                <!--Contact section-->
                 <section>
                     <div>
                         <header>
