--- a/html_advanced/16-index.html
+++ b/html_advanced/16-index.html
@@ -9,6 +9,7 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
+        <!--Header-->
             <header><div><span>Techium</span><nav></nav></div></header>
             <main>
                 <h1>Homepage</h1>
