was updating wrong file again

--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -9,16 +9,20 @@
         <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
+
         <!--Header-->
             <header><div><span>Techium</span><nav></nav></div></header>
-            <!--Main-->
             <main>
                 <h1>Homepage</h1>
+
+                <!--Hero section-->
                 <section>
                     <div>
                         <h2>We help you build your brand!</h2>
                     </div>
                 </section>
+
+                <!--Services section-->
                 <section>
                     <div>
                         <header>
@@ -35,6 +39,8 @@
                         </div>
                     </div>
                 </section>
+
+                <!--Works-->
                 <section>
                     <div>
                         <header>
@@ -48,6 +54,8 @@
                         </div>
                     </div>
                 </section>
+
+                <!--About Us section-->
                 <section>
                     <div>
                         <header>
@@ -64,6 +72,8 @@
                         </div>
                     </div>
                 </section>
+
+                <!--Latest news section-->
                 <section>
                     <div>
                         <header><h2>Latest news</h2></header>
@@ -86,6 +96,8 @@
                         </div>
                     </div>
                 </section>
+
+                <!--Testimonials section-->
                 <section>
                     <div>
                         <header>
@@ -99,6 +111,8 @@
                         </div>
                     </div>
                 </section>
+
+                <!--Contact section-->
                 <section>
                     <div>
                         <header>
@@ -111,7 +125,6 @@
                     </div>
                 </section>
             </main>
-            <!--Footer-->
             <footer><div>Footer</div></footer>
     </body>
 </html>
