--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -12,6 +12,8 @@
         <br>
         <!--Header-->
             <header><div><span>Techium</span><nav></nav></div></header>
+            <br>
+            <!--Main-->
             <main>
                 <h1>Homepage</h1>
                 <br>
@@ -40,7 +42,7 @@
                     </div>
                 </section>
                 <br>
-                <!--Works-->
+                <!--Works section-->
                 <section>
                     <div>
                         <header>
