adjusted indentation of header content

--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -11,7 +11,8 @@
     <body>
         <br>
         <!--Header-->
-            <header><div><span>Techium</span><nav></nav></div></header>
+            <header>
+                <div><span>Techium</span><nav></nav></div></header>
             <br>
             <!--Main-->
             <main>
