--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -12,7 +12,11 @@
         <br>
         <!--Header-->
             <header>
-                <div><span>Techium</span><nav></nav></div></header>
+                <div>
+                    <span>Techium</span>
+                    <nav></nav>
+                </div>
+            </header>
             <br>
             <!--Main-->
             <main>
