added Footer comment

--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -133,6 +133,7 @@
                     </div>
                 </section>
             </main>
+            <!-- Footer -->
             <footer><div>Footer</div></footer>
     </body>
 </html>
