changed id and link for latest_news

--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -22,7 +22,7 @@
                         <a href="#services">Services</a>
                         <a href="#works">Works</a>
                         <a href="#about">About</a>
-                        <a href="#latest">Latest news</a>
+                        <a href="#latest_news">Latest news</a>
                         <a href="#testimonials">Testimonials</a>
                         <a href="#contact">Contact</a>
                     </nav>
@@ -94,7 +94,7 @@
                 <!-- Latest news section -->
                 <section>
                     <div>
-                        <header><h2 id="latest">Latest news</h2></header>
+                        <header><h2 id="latest_news">Latest news</h2></header>
                         <div>
                             <article>
                                 <p>Career</p>
