--- a/html_advanced/26-styleguide.html
+++ b/html_advanced/26-styleguide.html
@@ -47,7 +47,7 @@
                             <li>Sagittis adipiscing lorem eleifend.</li>
                             <li>Felis enim feugiat dolore viverra.</li>
                         </ol>
-                        <h3>Definition List title</h3>
+                        <h3>Definition</h3>
                         <dl>
                             <dt>Definition List title</dt>
                             <dd>Definition text</dd>
