--- a/html_advanced/28-styleguide.html
+++ b/html_advanced/28-styleguide.html
@@ -59,6 +59,7 @@
                     </div>
                  </section>
                  <hr>
+                 <!-- Horizontal rule -->
                  <section>
                     <header>
                         <h2>Horizontal rule</h2>
