--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -167,7 +167,10 @@
                 </section>
             </main>
             <!-- Footer -->
-            <footer> 234 Washington Street<br>Urbana, Illinois
+            <footer>
+                <address>
+                    234 Washington Street<br>Urbana, Illinois
+                </address>
                 <div>
                     <ul>
                         <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
